--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@
         <div class="container py-3">
             <div class="d-flex align-items-center">
                 <a href="index.html">
-                    <h2 class="text-white fw-bold m-0">WELDORK</h2>
+                    <h2 class="text-white fw-bold m-0">DIRECT DRIVE</h2>
                 </a>
                 <div class="ms-auto d-flex align-items-center">
-                    <small class="ms-4"><i class="fa fa-map-marker-alt me-3"></i>123 Street, New York, USA</small>
-                    <small class="ms-4"><i class="fa fa-envelope me-3"></i>info@example.com</small>
-                    <small class="ms-4"><i class="fa fa-phone-alt me-3"></i>+012 345 67890</small>
+                    <small class="ms-4"><i class="fa fa-map-marker-alt me-3"></i>#42, Attibele Sarjapur Road, Bangalore- 562107</small>
+                    <small class="ms-4"><i class="fa fa-envelope me-3"></i>info@directdrive.in</small>
+                    <small class="ms-4"><i class="fa fa-phone-alt me-3"></i>+91-9448853775 / +91-9043674758</small>
                     <div class="ms-3 d-flex">
                         <a class="btn btn-sm-square btn-light text-primary ms-2" href=""><i
                                 class="fab fa-facebook-f"></i></a>
@@ -123,11 +123,12 @@
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <img class="w-100" src="img/carousel-1.jpg" alt="Image">
-                    <div class="carousel-caption">
-                        <h1 class="display-1 text-uppercase text-white mb-4 animated zoomIn">Best Metalcraft Solutions
-                        </h1>
+                    <div class="carousel-caption d-flex flex-column justify-content-center align-items-center h-100 text-center">
+                        <h1 class="display-1 text-uppercase text-white mb-2 animated zoomIn">Direct Drive</h1>
+                        <h2 class="text-capitalize text-white mb-4 animated zoomIn" style="font-size: 1.5rem;">Integrated Solutions Pvt Ltd</h2>
                         <a href="#" class="btn btn-primary py-3 px-4">Explore More</a>
                     </div>
+                    
                 </div>
                 <div class="carousel-item">
                     <img class="w-100" src="img/carousel-2.jpg" alt="Image">
