--- a/service.html
+++ b/service.html
@@ -267,7 +267,7 @@
                         </div>
                         <div class="ms-3">
                             <h6 class="text-white text-uppercase">Office Address</h6>
-                            <span class="text-white">123 Street, New York, USA</span>
+                            <span class="text-white">#42, Attibele Sarjapur Road, Bangalore- 562107</span>
                         </div>
                     </div>
                     <hr class="bg-body">
@@ -441,7 +441,7 @@
 
 
     <!-- Newsletter Start -->
-    <div class="container-fluid newsletter mt-6 wow fadeIn" data-wow-delay="0.1s">
+    <!-- <div class="container-fluid newsletter mt-6 wow fadeIn" data-wow-delay="0.1s">
         <div class="container pb-5">
             <div class="bg-white p-5 mb-5">
                 <div class="row g-5">
@@ -462,7 +462,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- Newsletter End -->
 
 
@@ -472,9 +472,9 @@
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
                     <h5 class="text-uppercase text-light mb-4">Our Office</h5>
-                    <p class="mb-2"><i class="fa fa-map-marker-alt text-primary me-3"></i>123 Street, New York, USA</p>
-                    <p class="mb-2"><i class="fa fa-phone-alt text-primary me-3"></i>+012 345 67890</p>
-                    <p class="mb-2"><i class="fa fa-envelope text-primary me-3"></i>info@example.com</p>
+                    <p class="mb-2"><i class="fa fa-map-marker-alt text-primary me-3"></i>#42, Attibele Sarjapur Road, Bangalore- 562107</p>
+                    <p class="mb-2"><i class="fa fa-phone-alt text-primary me-3"></i>+91-9448853775 / +91-9043674758</p>
+                    <p class="mb-2"><i class="fa fa-envelope text-primary me-3"></i>info@directdrive.in</p>
                     <div class="d-flex pt-3">
                         <a class="btn btn-square btn-light me-2" href=""><i
                                 class="fab fa-twitter"></i></a>
