--- a/contact.html
+++ b/contact.html
@@ -135,14 +135,14 @@
                     <div class="col-lg-6 pe-lg-5 wow fadeIn" data-wow-delay="0.3s">
                         <h1 class="display-6 text-uppercase text-white mb-4">Have Any Query? Feel Free To Contact Us
                         </h1>
-                        <p class="text-white mb-5 wow fadeIn" data-wow-delay="0.4s">The contact form is currently inactive. Get a functional and working contact form with Ajax & PHP in a few minutes. Just copy and paste the files, add a little code and you're done. <a href="https://htmlcodex.com/contact-form">Download Now</a>.</p>
+                        <!-- <p class="text-white mb-5 wow fadeIn" data-wow-delay="0.4s">The contact form is currently inactive.The contact form is currently inactive. Get a functional and working contact form with Ajax & PHP in a few minutes. Just copy and paste the files, add a little code and you're done. <a href="https://htmlcodex.com/contact-form">Download Now</a>.</p> -->
                         <div class="d-flex align-items-start wow fadeIn" data-wow-delay="0.5s">
                             <div class="btn-lg-square bg-white">
                                 <i class="bi bi-envelope-at text-dark fs-3"></i>
                             </div>
                             <div class="ms-3">
                                 <h6 class="text-white text-uppercase">Mail Us</h6>
-                                <span class="text-white">info@example.com</span>
+                                <span class="text-white">info@directdrive.in</span>
                             </div>
                         </div>
                         <hr class="bg-body">
@@ -152,7 +152,7 @@
                             </div>
                             <div class="ms-3">
                                 <h6 class="text-white text-uppercase">Call Us</h6>
-                                <span class="text-white">+012 345 67890</span>
+                                <span class="text-white">+91-9448853775/ +91-9043674758</span>
                             </div>
                         </div>
                     </div>
@@ -201,17 +201,23 @@
             </div>
         </div>
         <div class="container-fluid px-0 wow fadeInUp" data-wow-delay="0.5s">
-            <iframe class="w-100 h-100"
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3001156.4288297426!2d-78.01371936852176!3d42.72876761954724!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4ccc4bf0f123a5a9%3A0xddcfc6c1de189567!2sNew%20York%2C%20USA!5e0!3m2!1sen!2sbd!4v1603794290143!5m2!1sen!2sbd"
-            frameborder="0" style="min-height: 500px; border:0;" allowfullscreen="" aria-hidden="false"
-            tabindex="0"></iframe>
+            <iframe 
+  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3889.854656487174!2d77.78116387594353!3d12.852662587451853!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae73aed429ebb9%3A0x2caa1bf11d64049c!2s42%2C%20Sarjapura%20-%20Attibele%20Rd%2C%20beside%20Sunniva%20Willow%2C%20Infosys%20Head%20Quater%2C%20Sarjapura%2C%20Bengaluru%2C%20Karnataka%20562125!5e0!3m2!1sen!2sin!4v1749386190743!5m2!1sen!2sin" 
+  width="100%" 
+  height="450" 
+  style="border:0;" 
+  allowfullscreen="" 
+  loading="lazy" 
+  referrerpolicy="no-referrer-when-downgrade">
+</iframe>
+
         </div>
     </div>
     <!-- Contact End -->
 
 
     <!-- Newsletter Start -->
-    <div class="container-fluid newsletter mt-6 wow fadeIn" data-wow-delay="0.1s">
+    <!-- <div class="container-fluid newsletter mt-6 wow fadeIn" data-wow-delay="0.1s">
         <div class="container pb-5">
             <div class="bg-white p-5 mb-5">
                 <div class="row g-5">
@@ -232,7 +238,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- Newsletter End -->
 
 
@@ -242,9 +248,9 @@
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
                     <h5 class="text-uppercase text-light mb-4">Our Office</h5>
-                    <p class="mb-2"><i class="fa fa-map-marker-alt text-primary me-3"></i>123 Street, New York, USA</p>
-                    <p class="mb-2"><i class="fa fa-phone-alt text-primary me-3"></i>+012 345 67890</p>
-                    <p class="mb-2"><i class="fa fa-envelope text-primary me-3"></i>info@example.com</p>
+                    <p class="mb-2"><i class="fa fa-map-marker-alt text-primary me-3"></i>#42, Attibele Sarjapur Road, Bangalore- 562107</p>
+                    <p class="mb-2"><i class="fa fa-phone-alt text-primary me-3"></i>+91-9448853775 / +91-9043674758</p>
+                    <p class="mb-2"><i class="fa fa-envelope text-primary me-3"></i>info@directdrive.in</p>
                     <div class="d-flex pt-3">
                         <a class="btn btn-square btn-light me-2" href=""><i
                                 class="fab fa-twitter"></i></a>
