--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                             <i class="fa fa-hammer fa-2x text-white"></i>
                         </div>
                         <div class="p-5 pt-0">
-                            <h5 class="text-uppercase mb-3">Quality Welding</h5>
+                            <h5 class="text-uppercase mb-3">Instant Pricing</h5>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur tellus augue.</p>
                             <a class="position-relative text-body text-uppercase small d-flex justify-content-between"
                                 href="#"><b class="bg-white pe-3">Read More</b> <i
@@ -224,7 +224,7 @@
                             <i class="fa fa-dollar-sign fa-2x text-white"></i>
                         </div>
                         <div class="p-5 pt-0">
-                            <h5 class="text-uppercase">Affordable Pricing</h5>
+                            <h5 class="text-uppercase">One Point Solutions</h5>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur tellus augue.</p>
                             <a class="position-relative text-body text-uppercase small d-flex justify-content-between"
                                 href="#"><b class="bg-white pe-3">Read More</b> <i
@@ -238,7 +238,7 @@
                             <i class="fa fa-check-double fa-2x text-white"></i>
                         </div>
                         <div class="p-5 pt-0">
-                            <h5 class="text-uppercase">Best Welder</h5>
+                            <h5 class="text-uppercase">Insurance with 24/7 Support</h5>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur tellus augue.</p>
                             <a class="position-relative text-body text-uppercase small d-flex justify-content-between"
                                 href="#"><b class="bg-white pe-3">Read More</b> <i
@@ -252,7 +252,7 @@
                             <i class="fa fa-tools fa-2x text-white"></i>
                         </div>
                         <div class="p-5 pt-0">
-                            <h5 class="text-uppercase">Quality Tools</h5>
+                            <h5 class="text-uppercase">Realtime Tracking System</h5>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur tellus augue.</p>
                             <a class="position-relative text-body text-uppercase small d-flex justify-content-between"
                                 href="#"><b class="bg-white pe-3">Read More</b> <i
@@ -461,7 +461,7 @@
                         </div>
                         <div class="ms-3">
                             <h6 class="text-white text-uppercase">Office Address</h6>
-                            <span class="text-white">123 Street, New York, USA</span>
+                            <span class="text-white">#42, Attibele Sarjapur Road, Bangalore- 562107</span>
                         </div>
                     </div>
                     <hr class="bg-body">
@@ -747,9 +747,9 @@
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
                     <h5 class="text-uppercase text-light mb-4">Our Office</h5>
-                    <p class="mb-2"><i class="fa fa-map-marker-alt text-primary me-3"></i>123 Street, New York, USA</p>
-                    <p class="mb-2"><i class="fa fa-phone-alt text-primary me-3"></i>+012 345 67890</p>
-                    <p class="mb-2"><i class="fa fa-envelope text-primary me-3"></i>info@example.com</p>
+                    <p class="mb-2"><i class="fa fa-map-marker-alt text-primary me-3"></i>#42, Attibele Sarjapur Road, Bangalore- 562107</p>
+                    <p class="mb-2"><i class="fa fa-phone-alt text-primary me-3"></i>+91-9448853775 / +91-9043674758</p>
+                    <p class="mb-2"><i class="fa fa-envelope text-primary me-3"></i>info@directdrive.in</p>
                     <div class="d-flex pt-3">
                         <a class="btn btn-square btn-light me-2" href=""><i
                                 class="fab fa-twitter"></i></a>
