--- a/index.html
+++ b/index.html
@@ -236,8 +236,8 @@
                             <i class="fa fa-check-double fa-2x text-white"></i>
                         </div>
                         <div class="p-5 pt-0">
-                            <h5 class="text-uppercase">Insurance with 24/7 Support</h5>
-                            <p>Enjoy peace of mind with full cargo insurance and round-the-clock assistance.</p>
+                            <h5 class="text-uppercase">24/7 Support</h5>
+                            <p>Enjoy peace of mind with round-the-clock assistance.</p>
                             <!-- <a class="position-relative text-body text-uppercase small d-flex justify-content-between"
                                 href="#"><b class="bg-white pe-3">Read More</b> <i
                                     class="bi bi-arrow-right bg-white ps-3"></i></a> -->
@@ -330,7 +330,7 @@
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="service-item">
                         <div class="service-inner pb-5">
-                            <img class="img-fluid w-100" src="img/service-1.jpg" alt="">
+                            <img class="img-fluid w-100" src="img/service-9.jpg" alt="">
                             <div class="service-text px-5 pt-4">
                                 <h5 class="text-uppercase">Instant Freight Pricing</h5>
                                 <p>Get real-time, transparent pricing for all your shipping needs with no hidden costs.</p>
@@ -343,7 +343,7 @@
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.2s">
                     <div class="service-item">
                         <div class="service-inner pb-5">
-                            <img class="img-fluid w-100" src="img/service-2.jpg" alt="">
+                            <img class="img-fluid w-100" src="img/service-10.jpg" alt="">
                             <div class="service-text px-5 pt-4">
                                 <h5 class="text-uppercase">Pan-India Coverage</h5>
                                 <p>Our vast network enables efficient cargo movement across every corner of India.</p>
@@ -356,7 +356,7 @@
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="service-item">
                         <div class="service-inner pb-5">
-                            <img class="img-fluid w-100" src="img/service-3.jpg" alt="">
+                            <img class="img-fluid w-100" src="img/service-11.jpg" alt="">
                             <div class="service-text px-5 pt-4">
                                 <h5 class="text-uppercase">Customized Logistics</h5>
                                 <p>Tailor-made solutions designed for your business, industry, and cargo requirements.</p>
@@ -369,7 +369,7 @@
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.4s">
                     <div class="service-item">
                         <div class="service-inner pb-5">
-                            <img class="img-fluid w-100" src="img/service-4.jpg" alt="">
+                            <img class="img-fluid w-100" src="img/service-16.jpg" alt="">
                             <div class="service-text px-5 pt-4">
                                 <h5 class="text-uppercase">24/7 Customer Support</h5>
                                 <p>Always-on support team to address your transport needs and resolve issues swiftly.</p>
@@ -382,7 +382,7 @@
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="service-item">
                         <div class="service-inner pb-5">
-                            <img class="img-fluid w-100" src="img/service-5.jpg" alt="">
+                            <img class="img-fluid w-100" src="img/service-12.jpg" alt="">
                             <div class="service-text px-5 pt-4">
                                 <h5 class="text-uppercase">Multi-Size Fleet</h5>
                                 <p>From 12-wheelers to 32-feet containers — we have the perfect truck for every job.</p>
@@ -395,7 +395,7 @@
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.2s">
                     <div class="service-item">
                         <div class="service-inner pb-5">
-                            <img class="img-fluid w-100" src="img/service-6.jpg" alt="">
+                            <img class="img-fluid w-100" src="img/service-14.jpg" alt="">
                             <div class="service-text px-5 pt-4">
                                 <h5 class="text-uppercase">Real-Time Tracking</h5>
                                 <p>Track your shipment’s live location through our smart GPS-powered tracking system.</p>
@@ -408,7 +408,7 @@
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="service-item">
                         <div class="service-inner pb-5">
-                            <img class="img-fluid w-100" src="img/service-7.jpg" alt="">
+                            <img class="img-fluid w-100" src="img/service-13.jpg" alt="">
                             <div class="service-text px-5 pt-4">
                                 <h5 class="text-uppercase">Insurance Coverage</h5>
                                 <p>Peace of mind with insured shipments and claims support for your valuable cargo.</p>
@@ -421,7 +421,7 @@
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.4s">
                     <div class="service-item">
                         <div class="service-inner pb-5">
-                            <img class="img-fluid w-100" src="img/service-8.jpg" alt="">
+                            <img class="img-fluid w-100" src="img/service-15.jpg" alt="">
                             <div class="service-text px-5 pt-4">
                                 <h5 class="text-uppercase">Technology Integration</h5>
                                 <p>Smart logistics with digital booking, automated alerts, and analytics-driven insights.</p>
@@ -463,7 +463,7 @@
                         </div>
                         <div class="ms-3">
                             <h6 class="text-white text-uppercase">Office Hours</h6>
-                            <span class="text-white">Mon–Sat 09:00 AM – 5:00 PM, Sun Closed</span>
+                            <span class="text-white">Mon–Sat 08:00 AM – 8:00 PM, Sun Closed</span>
                         </div>
                     </div>
                 </div>
@@ -780,22 +780,22 @@
                     <h5 class="text-uppercase text-light mb-4">Gallery</h5>
                     <div class="row g-1">
                         <div class="col-4">
-                            <img class="img-fluid" src="img/service-1.jpg" alt="">
+                            <img class="img-fluid" src="img/service-9.jpg" alt="">
                         </div>
                         <div class="col-4">
-                            <img class="img-fluid" src="img/service-2.jpg" alt="">
+                            <img class="img-fluid" src="img/service-10.jpg" alt="">
                         </div>
                         <div class="col-4">
-                            <img class="img-fluid" src="img/service-3.jpg" alt="">
+                            <img class="img-fluid" src="img/service-11.jpg" alt="">
                         </div>
                         <div class="col-4">
-                            <img class="img-fluid" src="img/service-4.jpg" alt="">
+                            <img class="img-fluid" src="img/service-12.jpg" alt="">
                         </div>
                         <div class="col-4">
-                            <img class="img-fluid" src="img/service-5.jpg" alt="">
+                            <img class="img-fluid" src="img/service-13.jpg" alt="">
                         </div>
                         <div class="col-4">
-                            <img class="img-fluid" src="img/service-6.jpg" alt="">
+                            <img class="img-fluid" src="img/service-14.jpg" alt="">
                         </div>
                     </div>
                 </div>
