--- a/index.html
+++ b/index.html
@@ -408,15 +408,16 @@
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="service-item">
                         <div class="service-inner pb-5">
-                            <img class="img-fluid w-100" src="img/service-13.jpg" alt="">
+                            <img class="img-fluid w-100" src="img/service-smart-routing.jpg" alt="Smart Route Optimization">
                             <div class="service-text px-5 pt-4">
-                                <h5 class="text-uppercase">Insurance Coverage</h5>
-                                <p>Peace of mind with insured shipments and claims support for your valuable cargo.</p>
+                                <h5 class="text-uppercase">Smart Route Optimization</h5>
+                                <p>Maximize delivery efficiency with AI-powered route planning that reduces transit time and fuel costs.</p>
                             </div>
                             <!-- <a class="btn btn-light px-3" href="">Read More<i class="bi bi-chevron-double-right ms-1"></i></a> -->
                         </div>
                     </div>
                 </div>
+                
     
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.4s">
                     <div class="service-item">
