get a quote fixed

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                         <a href="contact.html" class="nav-item nav-link">Contact</a>
                     </div>
                     <div class="ms-auto d-none d-lg-block">
-                        <a href="" class="btn btn-primary py-2 px-3">Get A Quote</a>
+                        <a href="#contact-us" class="btn btn-primary py-2 px-3">Get A Quote</a>
                     </div>
                 </div>
             </nav>
@@ -469,7 +469,7 @@
                     </div>
                 </div>
     
-                <div class="col-lg-6 mb-n5 wow fadeIn" data-wow-delay="0.7s">
+                <div id="contact-us" class="col-lg-6 mb-n5 wow fadeIn" data-wow-delay="0.7s">
                     <div class="bg-white p-5">
                         <h2 class="text-uppercase mb-4">Schedule a Pickup</h2>
                         <div class="row g-3">
