--- a/service.html
+++ b/service.html
@@ -96,7 +96,7 @@
                         <a href="contact.html" class="nav-item nav-link">Contact</a>
                     </div>
                     <div class="ms-auto d-none d-lg-block">
-                        <a href="" class="btn btn-primary py-2 px-3">Get A Quote</a>
+                        <a href="index.html#contact-us" class="btn btn-primary py-2 px-3">Get A Quote</a>
                     </div>
                 </div>
             </nav>
